增加更多分辨率图像的拉取
